--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
       <artifactId>webdrivermanager</artifactId>
       <version>3.6.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
@@ -79,7 +85,6 @@
       <artifactId>spring-core</artifactId>
       <version>5.2.6.RELEASE</version>
     </dependency>
-
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
